--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -21,7 +21,7 @@ FROM nginx:alpine
 # 🚚 Copy built static files from builder stage
 COPY --from=builder /app/build /usr/share/nginx/html
 
-COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+ADD nginx/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
