--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -21,8 +21,10 @@ FROM nginx:alpine
 # 🚚 Copy built static files from builder stage
 COPY --from=builder /app/build /usr/share/nginx/html
 
-ADD nginx/default.conf /etc/nginx/conf.d/default.conf
+# 🧾 Add custom nginx config (optional but usually required for SPA)
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
+# 🌐 Expose port 80 for HTTP
 EXPOSE 80
 
 # 🚀 Start nginx
